# cyberweapons

./: DISCLAIMER  LICENSE  README.md
Backdoors/BasicRAT/: README.md  basicRAT_client.py  basicRAT_server.py
Cryptanalysis/: lorenz
Encryption/: README.md
Encryption/2FSH-REF/: TWOFISH.C
Encryption/2fsh-asm/: 2FISH_86.ASM  COMPILE.BAT  CPUTYPE.ASM  README  STRUCMAC.INC
Encryption/2fsh-z80/: twofish_fk1.asm  twofish_pk1.asm
Encryption/2fsh6805/: README  TABLE.INC  TWOFISH.ASM  TWOFISH.LST  VECTOR.INC
Encryption/3-WAY/: 3-way.c
Encryption/A5/: a5-article.txt  a5.c  gsm.txt
Encryption/ACME/: BlockCipher.java  BlowfishCipher.java  CbcBlockCipher.java  Cipher.java  Crc16Hash.java  Crc32Hash.java  CryptoUtils.java  Des3Cipher.java  DesCipher.java  EncryptedInputStream.java  EncryptedOutputStream.java  Hash.java  IdeaCipher.java  NullCipher.java  Rc4Cipher.java  Rot13Cipher.java  ShaHash.java  StreamCipher.java
Encryption/AKELARRE/: Ake32.c  Ake32.h
Encryption/ASSORTED/: BLOCK.C  CAESAR.C  CAPITAL.C  CHI-SQ.C  ENTROPY.C  GETOPT.C  GET_KEY.C  HEADER.H  KAPPA.C  MAKEFILE  N-GRAM.C  ROTOR.C  ROTOR.CFG  TEXTSTRP.C  VIGENERE.C
Encryption/BBC/: BBC.C  MAIN.C  MAKEFILE
Encryption/BFSH-ABB/: blowfish.txt
Encryption/BFSH-ABE/: Makefile  blowfish  blowfish.cc
Encryption/BFSH-CON/: blowfish.cpp
Encryption/BFSH-KOC/: Blowfish.c  Blowfish.h  Main.c
Encryption/BFSH-LAC/: BFISH4B.PAS  BFISHCBC.PAS  BLW-CBC.PAS  ERRORS.TXT  FILE_ID.DIZ  HISTORY.TXT  MEDISIS.COM  README.TXT  THANKS.TXT  TODO.TXT
Encryption/BFSH-NAF/: Blowfish.java
Encryption/BFSH-REF/: blowfish.def
Encryption/BFSH-UNK/: BLOWFISH
Encryption/BIGNUM1/: BIGNUM
Encryption/BIGNUM2/: BIGNUM.C
Encryption/BRUTERC4/: bruterc4.c
Encryption/Bfsh-jav/: Blowfish-cert.txt  TestBlowfish.java
Encryption/CA1-1/: CRDFUS.C  CRDFUS.H  CRINIT.C  CRINIT.H  CRLINK.C  CRLINK.H  CRPERM.C  CRPERM.H  CRTYPE.H  CRUTIL.C  CRYPT.C  MAKEFILE
Encryption/CAESAR/: Makefile  caesar.c
Encryption/CAST-256/: cast.c
Encryption/CAST-BAR/: cast.c
Encryption/CAST-BAR2/: cast.c  cast_tab.h
Encryption/CAST-GJK/: fcast011.tgz  readme011.txt
Encryption/CAST-GUT/: Cast128.c  Cast128.h  Cast128s.h  readme.txt
Encryption/CAST-REI/: Makefile  cast.c  cast.h  cast_sboxes.h  casttest.c
Encryption/CBW/: APPROX.C  AUTOTRI.C  AUTOTRI.H  BANNER.C  BDRIVER.C  CBLOCKS.C  CBW.DOC  CHAR-IO.C  CIPHER.C  CIPHER.H  COMMON.WOR  DBLOCK.C  DBLOCK.H  DBSAUX.C  DLINE.C  ECLASS.C  EDRIVER.C  ENIGMA.C  FOO.CIP  FOO.PER  GBLOCK.C  GRAPHICS  H19.SLI  INDEX  KEYLIB.C  KNIT.C  LAYOUT.H  LPAIR.C  MAKEFILE  MANIFEST  MSS-BIGR.STA  MSS-PROB.TXT  MSS.STA  MSS.WOR  PARSER.C  PARSER.H  PERM.C  PGATE.C  PQUEUE.C  PQUEUE.H  (+34 more)
Encryption/CHAMBERS/: CHAMBERS.TXT
Encryption/CHI/: chi.c
Encryption/CRPT-POL/: CRPT-POL
Encryption/CRYPT1/: CRYPT1
Encryption/CRYPT3-L/: CRYPT3.C
Encryption/CRYPTBAS/: README  c6.c  crt.c  freq.c  ic.c  info  jac.c  knap.c  rprime.c
Encryption/CRYPTON/: crypton.c  crypton1.c
Encryption/Cryptix-1.16/: CHANGES  MANIFEST  Makefile.PL
Encryption/DEAL/: deal.c
Encryption/DES-BARR/: Makefile  README  atob.c  btoa.1  btoa.c  cipher.1  cipher.c  cipher.h  cmail  des.h  desblock.c  descfb.c  desdefs.h  deskey.c  destest.c  desvalid.c  getkey.c  sboxp.c  testcfb.c  testdata.des  testin  testin.cfb  testout  testout.cfb
Encryption/DES-BISH/: cdes.1  cdes.c
Encryption/DES-DWY/: DESAlgorithm.java
Encryption/DES-KARN/: Makefile  README  benchmark.c  des.1  des.3  des.c  descalc.c  descert.c  descycle.c  getopt.c  getpass.c  main.c  misc.c  radlogin.c  rkeys.format  testdata  uudecode.c  uuencode.c
Encryption/DES-KOON/: DES.1  DES.3  DES.C  DES.H  DES.TES  DIAG.C  FDES.C  FDES.H  GETOPT.C  HEX.C  INIT_PER.C  INV_PERM.C  (+3 more)
Exploits/meltdown/: CMakeLists.txt  README.md
Exploits/meltdown/src/: poc.c
Keygen/: CMakeCache.txt  CTestTestfile.cmake  Makefile  README.md
Keygen/test/: ArgumentTest  ArgumentTest.cpp  CMakeLists.txt  FormatTest  MemoryTest  MemoryTest.cpp  MockedTest  MockedTest.cpp  TestUtil.h
PasswordGenerator/Keygen/: .gitignore  .travis.yml  CMakeLists.txt  cmake_install.cmake
PasswordGenerator/Keygen/cmake/: Coverage.cmake  Doxyfile.in
PasswordGenerator/Keygen/include/keygen/: KeyGen.h  Options.h  Output.h
PasswordGenerator/Keygen/src/: CMakeLists.txt  CTestTestfile.cmake  Options.c
PasswordGenerator/Keygen/src/keygen/: CMakeLists.txt  CTestTestfile.cmake  Makefile
PasswordGenerator/Keygen/test/: CTestTestfile.cmake  DataTest  DataTest.cpp  FormatTest.cpp  Makefile  OptionsTest  OptionsTest.cpp  TestMain.cpp  cmake_install.cmake
Rootkits/: README.md
(+3292 files in other folders)
